--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "preserve",
+    "baseUrl": "./src"
   },
   "include": [
-    "src"
+    "./src",
+    "./src/types"
+  ],
+  "exclude": [
+    ".vscode"
   ]
 }
